[package]
name = "rls_to_syrust"
version = "0.1.0"
authors = ["Yoshiki Takashima <ytakashi@andrew.cmu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rls-analysis = { git = "https://github.com/YoshikiTakashima/rls-analysis.git", branch = "master"  }
regex = "1"
log = "0.4"
lazy_static = "1.4.0"
